control-plane/gateway07/gateway-api-0.7.1-custom/conformance/tests/httproute-path-match-order.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: path-matching-order
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: Exact
        value: /match
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: Exact
        value: /match/exact
    backendRefs:
    - name: infra-backend-v2
      port: 8080
  - matches:
    - path:
        type: Exact
        value: /match/exact/one
    backendRefs:
    - name: infra-backend-v3
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /match/
    backendRefs:
    - name: infra-backend-v3
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /match/prefix/
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /match/prefix/one
    backendRefs:
    - name: infra-backend-v2
      port: 8080
